divided the topics into basic and advanced categories

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                 </li>
             </ol>
             <h4>Sab Changa? To chalo ab ES6 ke Features padhlen.</h4>
+            <br>
+            <h6><b>Basics</b></h6>
             <ol>
                 <li>
                     <a href="http://javascript.info/strict-mode" target="_blank"><b>Use Strict</b></a>
@@ -47,12 +49,6 @@
                 </li>
                 <li>
                     <a href="http://javascript.info/object" target="_blank"><b>Javascript Objects</b></a>
-                </li>
-                <li>
-                    <a href="http://javascript.info/getting-all-properties" target="_blank"><b>Getting all Properties</b></a>
-                </li>
-                <li>
-                    <a href="http://javascript.info/getting-all-properties" target="_blank"><b>Prototype Methods, objects without __proto__</b></a>
                 </li>
                 <li>
                     <a href="http://javascript.info/prototype-methods" target="_blank"><b>Extended Parameter Handling</b></a>
@@ -82,6 +78,31 @@
                     <a href="http://javascript.info/class" target="_blank"><b>Class Inheritance</b></a>
                 </li>
                 <li>
+                    <a href="http://es6-features.org/#ObjectPropertyAssignment" target="_blank"><b>New Built-In methods</b></a>
+                </li>
+                <li>
+                    <a href="http://javascript.info/promise-basics" target="_blank"><b>Promises</b></a>
+                </li>
+                <li>
+                    <a href="http://javascript.info/promise-chaining" target="_blank"><b>Promise Chaining</b></a>
+                </li>
+                <li>
+                    <a href="http://javascript.info/async-await" target="_blank"><b>Async Await</b></a>
+                </li>
+                <li>
+                    <a href="http://javascript.info/array-methods" target="_blank"><b>Array Methods</b></a>
+                </li>
+            </ol>
+            <br>
+            <h6><b>Advanced</b></h6>
+            <ol>
+                <li>
+                    <a href="http://javascript.info/getting-all-properties" target="_blank"><b>Prototype Methods, objects without __proto__</b></a>
+                </li>
+                <li>
+                    <a href="http://javascript.info/getting-all-properties" target="_blank"><b>Getting all Properties</b></a>
+                </li>
+                <li>
                     <a href="http://javascript.info/class" target="_blank"><b>Symbols</b></a>
                 </li>
                 <li>
@@ -96,27 +117,12 @@
                 <li>
                     <a href="http://javascript.info/arraybuffer-binary-arrays" target="_blank"><b>Typed Arrays</b></a>
                 </li>
-                <li>
-                    <a href="http://javascript.info/array-methods" target="_blank"><b>Array Methods</b></a>
-                </li>
-                <li>
-                    <a href="http://es6-features.org/#ObjectPropertyAssignment" target="_blank"><b>New Built-In methods</b></a>
-                </li>
-                <li>
-                    <a href="http://javascript.info/promise-basics" target="_blank"><b>Promises</b></a>
-                </li>
-                <li>
-                    <a href="http://javascript.info/promise-chaining" target="_blank"><b>Promise Chaining</b></a>
-                </li>
-                <li>
-                    <a href="http://javascript.info/async-await" target="_blank"><b>Async Await</b></a>
-                </li>
             </ol>
         </div>
 
         <div class="jumbotron jumbotron-fluid" style="margin-bottom: 0px">
             <div class="container">
-                <h1>Chalo Badhiya!</h1>
+                <h4>Chalo Badhiya!</h4>
                 <p>You're now ready to rock and play with ES6!</p>
             </div>
         </div>
